--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+        #tituloPrincipal{
+            color:brown;
+        }
+        .tituloNoticia{
+            font-size:2em;
+        }
+        body{
+            font-family: 'Gugi', cursive
+        }
+        a:link, a:visited{
+            color: #feab5a;
+        }
+        a:hover{
+            font-size: 3em;
+        }
+        a:active{
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
