--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>CV Agustina Aliciardi</title>
-    <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
+
     <style>
         body{
             text-align: center;
             font-family: 'Gugi', cursive;
+            background: linear-gradient(to right, blue , white);
+
         }
         div{
             border: 2px solid #1f1bff;
             margin: 10px;
             padding: 5px 30px;
+            background: red;
+            opacity: 80%;
+            border-radius: 15px;
         }
         img{
             width: 50px;
+            float: left;
+            border-radius: 25px;
+        }
+        div h3{
+            font-family : 'Gugi', cursive;
         }
     </style>
 </head>
