--- a/Ejercicios-HTML/ej_formulario2.html
+++ b/Ejercicios-HTML/ej_formulario2.html
@@ -19,14 +19,16 @@
     <form>
         Nombre: <input type="text"> <br>
         Apellido: <input type="text"> <br>
-        Sexo: Masculino <input type="radio" name="sexo" value="Masculino"> Femenino <input type="radio" name="sexo" value="Femenino"> <br>
+        Sexo: Masculino <input type="radio" name="sexo" value="Masculino"> Femenino <input type="radio" name="sexo"
+                                                                                           value="Femenino"> <br>
         Edad: <input type="number"> <br>
         Email: <input type="email"> <br>
         Usuario: <input type="text"> <br>
         Password: <input type="password"> <br>
         Confirmar Password: <input type="password"> <br>
 
-        Tipo de servicio: Free <input type="checkbox"> / Standard <input type="checkbox">/ Premium <input type="checkbox"> <br>
+        Tipo de servicio: Free <input type="checkbox"> / Standard <input type="checkbox">/ Premium <input
+            type="checkbox"> <br>
         Tema:
         <select>
             <option>Política</option>
