--- a/Ejercicios-HTML/ej_animales.html
+++ b/Ejercicios-HTML/ej_animales.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Animales</title>
 </head>
+
 <body>
-<header><h1>Curiosidades Animales</h1></header>
+<header>
+    <h1>Curiosidades Animales</h1>
+</header>
 <div>
     <h2>Caballo</h2>
     <p>El caballo es un mamífero perteneciente a la familia de los équidos. Existen 86 razas diferentes en el mundo.
         En la familia del caballo se incluyen tres grupos de mamíferos salvajes:
     <ul>
         <li>cebras (originarias de África)</li>
-        <li>asnos </li>
-        <li>caballos </li>
+        <li>asnos</li>
+        <li>caballos</li>
     </ul>
     </p>
     <p>
         El caballo emite el siguiente sonido:
-        <!--Insertar audio de la carpeta resources-->
     </p>
+    <audio src="resources/horse.ogg" controls>
+        Tu navegador no soporta el elemento audio.
+    </audio>
+    <!--Insertar audio de la carpeta resources-->
+
 </div>
 
 <div>
@@ -34,8 +42,12 @@
     </p>
     <p>
         En Alaska, cuando el salmón remonta el río para el desove estival, los osos pueden reunirse para pescar.
-        <!--Insertar Video de osos pescando ubicado en la carpeta de resources-->
     </p>
+    <video src="resources/movie.mp4" controls>
+        Tu navegador no soporta el elemento video
+    </video>
+    <!--Insertar Video de osos pescando ubicado en la carpeta de resources-->
+
 </div>
 <div>
     <h2>León</h2>
@@ -46,7 +58,12 @@
         Es un animal de gran tamaño, ya que un león macho puede llegar a pesar aproximadamente hasta 300 kilogramos,
         siendo de esta manera el félido vivo mas grande después de su pariente el Tigre.
     </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/n5sDHlcFkiE" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     <!--Insertar video de youtube sobre leones-->
 </div>
 </body>
+
 </html>
